--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "bili",
-    "docs": "esdoc"
+    "docs": "esdoc",
+    "examples": "parcel examples/index.pug --out-dir examples-dist  --open"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,10 @@
     "banner-package": "^0.1.0",
     "bili": "^3.0.15",
     "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0"
+    "esdoc-standard-plugin": "^1.0.0",
+    "parcel-bundler": "^1.9.3",
+    "pug": "^2.0.3",
+    "stylus": "^0.54.5"
   },
   "dependencies": {
     "get-elements-array": "^1.0.1"
