--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "moduleName": "MiniParallax",
   "version": "0.3.2",
   "description": "Parallax library",
-  "main": "dist/mini-parallax.es.js",
-  "unpkg": "dist/mini-parallax.iife.min.js",
+  "main": "dist/index.esm.js",
+  "unpkg": "dist/index.iife.min.js",
   "files": [
     "dist/"
   ],
